# strawberry-graphql-1504

./: README.md  pyproject.toml  request.sh
strawberry_graphql_1504/: input.py  model.py  response.py  schema.py
